--- a/DY/DY/Classes/Home/View/CollectionHeaderView.xib
+++ b/DY/DY/Classes/Home/View/CollectionHeaderView.xib
@@ -4,14 +4,13 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR" customClass="CollectionHeaderView" customModule="DY" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="478" height="71"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
@@ -29,7 +28,7 @@
                         <constraint firstAttribute="height" constant="18" id="4Va-yl-bJf"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="颜值" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XSI-A6-KhZ">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="测试" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XSI-A6-KhZ">
                     <rect key="frame" x="34" y="19.5" width="33" height="19.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <nil key="textColor"/>
@@ -58,6 +57,11 @@
                 <constraint firstItem="XSI-A6-KhZ" firstAttribute="leading" secondItem="rwc-Qj-avB" secondAttribute="trailing" constant="5" id="z6O-gw-Skg"/>
                 <constraint firstItem="ZwO-Jz-428" firstAttribute="top" secondItem="D7D-Mt-ReT" secondAttribute="bottom" constant="5" id="zLY-gg-PfB"/>
             </constraints>
+            <connections>
+                <outlet property="iconImageView" destination="rwc-Qj-avB" id="cPC-c3-ZdV"/>
+                <outlet property="moreBtn" destination="ZwO-Jz-428" id="Et4-Gf-D4h"/>
+                <outlet property="titleLabel" destination="XSI-A6-KhZ" id="XSR-Ta-bGo"/>
+            </connections>
             <point key="canvasLocation" x="47" y="-9.5"/>
         </collectionReusableView>
     </objects>
