--- a/DY/DY/Classes/Main/View/CollectionPrettyCell.xib
+++ b/DY/DY/Classes/Main/View/CollectionPrettyCell.xib
@@ -51,7 +51,7 @@
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <state key="normal" title="11万人在线">
-                            <color key="titleColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                     </button>
                 </subviews>
