--- a/DY/DY/Classes/Home/View/RecommendCycleView.xib
+++ b/DY/DY/Classes/Home/View/RecommendCycleView.xib
@@ -16,6 +16,7 @@
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="hVL-jJ-Tst">
                     <rect key="frame" x="0.0" y="0.0" width="488" height="218"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NeF-KD-f9n">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
