--- a/DY/DY/Classes/Home/View/CollectionGameCell.xib
+++ b/DY/DY/Classes/Home/View/CollectionGameCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CollectionGameCell" customModule="DY" customModuleProvider="target">
+        <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CollectionGameCell" customModule="DY" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="196" height="113"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -40,7 +40,7 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <view clipsSubviews="YES" alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w1d-eQ-lFy">
-                        <rect key="frame" x="0.0" y="112" width="196" height="1"/>
+                        <rect key="frame" x="0.0" y="113" width="196" height="1"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="0TD-ge-aeY"/>
@@ -55,7 +55,7 @@
                 <constraint firstItem="W4d-Fg-bHJ" firstAttribute="top" secondItem="qcV-v5-LIi" secondAttribute="bottom" constant="12" id="WeY-nc-gQ0"/>
                 <constraint firstItem="W4d-Fg-bHJ" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Yfk-eu-8X5"/>
                 <constraint firstAttribute="trailing" secondItem="w1d-eQ-lFy" secondAttribute="trailing" id="gla-j3-rou"/>
-                <constraint firstAttribute="bottom" secondItem="w1d-eQ-lFy" secondAttribute="bottom" id="xzB-F6-mfZ"/>
+                <constraint firstAttribute="bottom" secondItem="w1d-eQ-lFy" secondAttribute="bottom" constant="-1" id="xzB-F6-mfZ"/>
             </constraints>
             <size key="customSize" width="196" height="113"/>
             <connections>
