创建 房间对应的控制器

--- a/DY/DY/Base.lproj/Home.storyboard
+++ b/DY/DY/Base.lproj/Home.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -31,7 +30,7 @@
         <!--首页-->
         <scene sceneID="gKU-8o-Z8n">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="y16-TF-gh8" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="y16-TF-gh8" customClass="CustomNavigationController" customModule="DY" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="首页" image="btn_home_normal" selectedImage="btn_home_selected" id="4oA-zF-L8h"/>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
